# ZebraPrintLab

./: .gitattributes  .gitguardian.yaml  .gitignore  README.md  THIRD-PARTY-LICENSES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-ref-plan.md  tsconfig.app.json  tsconfig.test.json  vite.config.ts
.github/release/: web-README.md
.github/workflows/: deploy.yml  mirror.yml  pr.yml  release.yml  rust.yml
docs/: zpl-roadmap.md
docs/handoffs/: palette-zpl-icons-plan.md
scripts/: check-licenses.mjs  gen-attribution.mjs  gen-coverage.mjs  gen-gs1-catalog.mjs
scripts/data/: GS1-SYNTAX-DICTIONARY-NOTICE.md
scripts/lib/: pnpm-licenses.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  THIRD-PARTY-LICENSES-RUST.html  THIRD-PARTY-LICENSES-RUST.md  about.hbs  about.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/packaging/deb/: postinst
src-tauri/packaging/linux/: postinst
src-tauri/packaging/udev/: 70-zebraprintlab.rules  70-zplab.rules  99-zebraprintlab.rules
src-tauri/src/: credentials.rs  dataset.rs  db.rs  excel.rs  lib.rs  main.rs  mcp.rs  print.rs  scope.rs  transport.rs  usb.rs
src/assets/fonts/: NOTICE.md  OCRA-NOTICE.md  OCRB-NOTICE.md  PrintLabMono-NOTICE.md  VeraMono-NOTICE.md
src/components/: AppShell.tsx  NativeMenuBridge.tsx
src/components/Barcode/: BarcodeContentModalShell.tsx  ContentBuilderModal.tsx  Gs1ContentModal.tsx  QrContentModal.tsx
src/components/Canvas/: BarcodeObject.stateFrame.test.tsx  BarcodeObject.tsx  BarcodeObject.tsx.bak  CanvasContextMenu.tsx  FloatingCanvasButton.tsx  Grid.tsx  GuideLines.tsx  ImageObject.tsx  KonvaObject.tsx  LabelCanvas.tsx  LineObject.tsx  PaginationControl.tsx  PreflightOverlay.tsx  RotationButton.tsx  Ruler.tsx  altClickCycle.test.ts  altClickCycle.ts  barcodePreflight.test.ts  barcodePreflight.ts  bwipConstants.test.ts  bwipConstants.ts  bwipHelpers.test.ts  bwipHelpers.ts  bwipHelpers.ts.bak  canvasActions.test.ts  canvasActions.ts  canvasIcons.ts  code1dHriOverlay.tsx  dragGeometry.test.ts  dragGeometry.ts  eanUpcDigitNodes.tsx  hitTesting.test.ts  hitTesting.ts  konvaObjectProps.test.ts  konvaObjectProps.ts  lassoGeometry.integration.test.ts  lassoGeometry.test.ts  lassoGeometry.ts  measureTextDots.ts  measuredBoundsCache.test.ts  (+17 more)
src/components/Fonts/: FontManager.tsx
src/components/History/: HistoryDropdown.tsx
src/components/Output/: ImportReportModal.tsx  ImportSetupChoice.tsx  ImportSummary.tsx  LabelPreview.tsx  LabelaryNoticeModal.tsx  PrintToZebraDialog.batchNotice.test.tsx  PrintToZebraDialog.tsx  ZPLOutput.tsx  ZplImportModal.tsx  ZplLine.tsx
src/dnd/: types.ts
src/hooks/: useCollapsiblePanel.ts  useColorScheme.test.ts  useColorScheme.ts  useContextMenu.ts  useCopyToClipboard.ts  useCsvImportActions.ts  useDbConnectActions.ts  useDesignFileActions.ts  useDismiss.ts  useExcelImportActions.ts  useFocusTrap.ts  useFontCacheVersion.ts  useGlobalShortcuts.test.tsx  useGlobalShortcuts.ts  useMcpBridge.test.ts  useMcpBridge.ts  useMcpDesignRequest.test.ts  useMcpDesignRequest.ts  useMcpServer.ts  useNativeMenu.ts  useOutputPanel.ts  useUsbPrinters.ts  useZplImportExport.ts
src/lib/: align.test.ts  align.ts  alignment.test.ts  alignment.ts  barcodeCheckDigits.test.ts  barcodeCheckDigits.ts  barcodeHri.gs1.test.ts  barcodeHri.ts  barcodeRawGeometry.test.ts  barcodeRawGeometry.ts  barcodeScannability.ts  bulkToggle.test.ts  bulkToggle.ts  bwipConstants.test.ts  bwipConstants.ts  canvasImage.ts  contentEditableCaret.test.ts  contentEditableCaret.ts  coordinates.test.ts  coordinates.ts  coreHeadless.test.ts  credentialStore.test.ts  credentialStore.ts  csvImport.test.ts  csvImport.ts  customFonts.test.ts  customFonts.ts  dataMatrixFd.test.ts  dataSource.test.ts  db.ts  densityRescale.test.ts  densityRescale.ts  designFile.test.ts  designFile.ts  dom.ts  eanUpcValidate.ts  emittedAnchor.test.ts  emittedAnchor.ts  errorMessage.ts  excel.ts  (+146 more)
src/locales/: ar.ts  bg.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  es.ts  et.ts  fa.ts  fi.ts  fr.ts  he.ts  hr.ts  hu.ts  index.ts  it.ts  ja.ts  ko.ts  loadLocale.test.ts  lt.ts  lv.ts  nl.ts  no.ts  pl.ts  pt.ts  ro.ts  sk.ts  sl.ts  sr.ts  sv.ts  tr.ts  zh-hans.ts  zh-hant.ts
src/registry/: _template.ts  aztec.panel.tsx  aztec.ts  aztec.tsx  barcode1d.panel.tsx  barcode1d.ts  barcode1d.tsx  box.panel.tsx  box.ts  box.tsx  circle.tsx  codabar.panel.tsx  codabar.ts  codabar.tsx  codablock.panel.tsx  codablock.test.ts  codablock.ts  codablock.tsx  code11.panel.tsx  code11.ts  code11.tsx  code128.gs1.test.ts  code128.panel.tsx  code128.ts  code128.tsx  code39.panel.tsx  code39.ts  code39.tsx  code49.panel.tsx  code49.test.ts  code49.ts  code49.tsx  code93.panel.tsx  code93.ts  code93.tsx  contentSpec.test.ts  contentSpec.ts  datamatrix.panel.test.ts  datamatrix.panel.tsx  datamatrix.ts  (+104 more)
src/store/: datasetActions.ts  detectLocale.test.ts  dirtyTracking.ts  labelStore.internals.ts  labelStore.selectors.ts  labelStore.templates.test.ts  labelStore.test.ts  labelStore.tripwire.test.ts  labelStore.ts  labelStoreEnv.test.ts  labelaryKey.test.ts  mcpToken.test.ts  settingsActions.test.ts  useHistoryEntries.hook.test.tsx  useHistoryEntries.test.ts  useHistoryEntries.ts  usePreviewBinding.ts
src/test/: barcodeFidelity.ts  helpers.ts  labelarySync.test.ts  labelarySync.test.ts.bak  pngInk.ts  qrFixtures.ts  setup.ts  testModels.ts  textBoxMatch.test.ts  textVisualRegression.test.ts  tsconfig.json  visualRegression.test.ts  zebraPrint.test.ts  zplRoundtrip.test.ts
src/types/: Group.test.ts  Group.ts  LabelConfig.ts  LabelObject.ts  ObjectType.ts  PrinterProfile.ts  Variable.test.ts  Variable.ts  ZplEmit.ts  controlKey.test.ts  preflight.ts
tests/fixtures/: shapeTestCases.ts  testCases.ts  textBoxMatchCases.ts  textTestCases.ts  zebradesigner_driver_zd230.prn
tests/scripts/: fetch_labelary_default_text_fixtures.ts  fetch_labelary_fixtures.ts  fetch_labelary_text_fixtures.ts  measure_bbox.mjs  measure_bbox.ts
(+146 files in other folders)
