[package]
name = "zebra-print-lab"
version = "0.1.0"
description = "ZebraPrintLab desktop shell"
authors = ["u8array"]
license = "MIT"
repository = "https://github.com/u8array/ZebraPrintLab"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zebra_print_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
# generate_context! expands plugin config (plugins.updater) via serde_json.
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net", "time", "io-util", "rt"] }
# OS-native raw printing: winspool RAW on Windows, libcups on macOS/Linux.
# Sole transitive dep is libc. Linux CI needs libcups2-dev to link.
printers = "2.3.0"
# OS credential store for API keys: Windows Credential Manager, macOS
# Keychain, Linux DBus Secret Service. Linux CI needs libdbus-1-dev.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Direct USB printer IO: macOS has no usblp equivalent, so list/send/query go
# through IOKit via this pure-Rust stack (no libusb to link or vendor). The
# tokio feature gives the endpoints AsyncRead/AsyncWrite, so the TCP reply
# loop in transport.rs is reused verbatim.
nusb = { version = "0.2", features = ["tokio"] }

[dev-dependencies]
# rt only: the macros feature would pull tokio-macros, which lags tokio
# releases on crates.io; tests build their runtime by hand instead.
tokio = { version = "1", features = ["rt"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# External links (GitHub) via the system browser; window.open does not leave
# the webview sandbox without it.
tauri-plugin-opener = "2"
# Native open/save dialogs plus scoped file IO for the File menu; DOM file
# inputs need transient user activation that native menu callbacks may lack.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Bundle-size profile from the official Tauri size guide.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
