[package]
name = "zplab"
version = "0.1.0"
description = "ZPLab desktop shell"
authors = ["u8array"]
license = "MIT"
repository = "https://github.com/u8array/ZPLab"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zplab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
# generate_context! expands plugin config (plugins.updater) via serde_json.
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net", "time", "io-util", "rt"] }
# Stream a query's rows (db.rs) instead of fetch_all so a huge result is bounded
# by a byte budget and errors instead of OOMing. Already transitive via sqlx;
# tokio-stream keeps us in the tokio ecosystem we already depend on directly.
tokio-stream = { version = "0.1", default-features = false }
# OS-native raw printing: winspool RAW on Windows, libcups on macOS/Linux.
# Sole transitive dep is libc. Linux CI needs libcups2-dev to link.
printers = "2.3.0"
# OS credential store for API keys: Windows Credential Manager, macOS
# Keychain, Linux DBus Secret Service. Linux CI needs libdbus-1-dev.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
# Read-only dataset connector (db.rs). Bundled SQLite, no system lib to link;
# rustls-ring for pg/mysql TLS (aws-lc would drag cmake/nasm into every build).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "tls-rustls-ring"] }
# Excel as a plain file reader (excel.rs): ZebraDesigner-parity without the
# ODBC driver-manager tax. dates maps serial datetimes via chrono.
calamine = { version = "0.30.1", features = ["dates"] }
# Already transitive via calamine; used directly in excel.rs to bound a
# workbook's DECLARED uncompressed size before calamine materializes it, so a
# decompression bomb can't defeat the compressed-only file-size cap.
zip = { version = "4", default-features = false, features = ["deflate"] }
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
# Typed errors inside the db/excel connector (stringified only at the IPC edge).
# Already transitive via sqlx.
thiserror = "1"
# Canonicalize without the \\?\ prefix (scope.rs): stored grants must match
# user-visible paths or revoke's literal fallback can't find them.
dunce = "1"

[target.'cfg(unix)'.dependencies]
# Linux: O_NONBLOCK for the usblp read-back fd (AsyncFd needs a non-blocking
# fd). All unix: killpg to SIGKILL the MCP child's process group. Already
# transitive via printers, so this pins no new code.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Kill-on-close Job Object so the MCP child's cmd/pnpm/node tree dies with the
# app, including on crash (the OS closes the handle on process exit).
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# Direct USB printer IO: macOS has no usblp equivalent, so list/send/query go
# through IOKit via this pure-Rust stack (no libusb to link). The tokio feature
# gives the endpoints AsyncRead/AsyncWrite, reusing the transport.rs reply loop.
nusb = { version = "0.2", features = ["tokio"] }

[dev-dependencies]
# rt for hand-built runtimes, test-util for the paused clock in the reply-loop
# tests; the macros feature would pull tokio-macros, which lags tokio releases
# on crates.io, so tests build their runtime by hand instead.
tokio = { version = "1", features = ["rt", "test-util"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# External links (GitHub) via the system browser; window.open does not leave
# the webview sandbox without it.
tauri-plugin-opener = "2"
# Native open/save dialogs plus scoped file IO for the File menu; DOM file
# inputs need transient user activation that native menu callbacks may lack.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Bundle-size profile from the official Tauri size guide.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
